# rnpasskey-demo

./: .env  .firebaserc  .gitignore  README.md  app.json  eas.json  firebase.json  package-lock.json  package.json
.well-known/: assetlinks.json
public/.well-known/: apple-app-site-association  assetlinks.json
relying-party/: .gitignore  Cargo.toml
relying-party/src/: error.rs  lib.rs  main.rs  model.rs  routes.rs
src/: App.tsx  constants.ts  gateway.ts  model.ts  styles.ts
src/plugins/: withAndroidAssetStatements.js
src/screens/: Demo.tsx  Home.tsx
src/testData/: AuthRequest.json  RegRequest.json
webserver/: package.json  server.js
