[package]
name = "passkey-demo-relying-party"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-server = "2.6.0"
actix-web = "4.11.0"
async-trait = "0.1.88"
chrono = "0.4.41"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
webauthn-rs = { version =  "0.5.1", features = ["danger-allow-state-serialisation"] }

